# UniGen

./: AUTHORS  README.md  UniGen2.py  contributors.txt  install.sh
sharpSAT-12.08.1/Release/: makefile
sharpSAT-12.08.1/Release/src/: subdir.mk
ugen2/: AUTHORS  INSTALL  LICENSE-MIT  Makefile  Makefile.am  Makefile.in  config.h.in  configure  libtool
ugen2/cmsat/: CMakeCache.txt  DimacsParser.cpp  DimacsParser.h  Main.cpp  Main.h  Makefile.am  Makefile.in  PackedRow.h  Solver.cpp  Solver.h  SolverConf.cpp  SolverConf.h  cmake_install.cmake  libcryptominisat.la  main.cpp  time_mem.h
ugen2/man/: Makefile  Makefile.in
